<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/hello" />

	<Button
	    android:id="@+id/user_info"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/user_info_btn" />

	<Button
	    android:id="@+id/contribute"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/contribute_btn" />

	<Button
	    android:id="@+id/search"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_btn" />
	
</LinearLayout>