<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contribute_title"
        android:textSize="@dimen/text_title" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="我要上传："
        android:textSize="@dimen/text_small" />

    <Button
        android:id="@+id/hostels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribute_hostels_btn"
        android:textSize="@dimen/text_middle" />

    <Button
        android:id="@+id/campings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribute_campings_btn"
        android:textSize="@dimen/text_middle" />

    <Button
        android:id="@+id/sceneries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribute_sceneries_btn"
        android:textSize="@dimen/text_middle" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribute_tips"
        android:textSize="@dimen/text_small" />

</LinearLayout>