<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_title"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint"
            android:maxLength="100"
            android:imeOptions="actionNone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLength="30"
            android:imeOptions="actionGo" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <CheckBox
        android:id="@+id/rmb_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rmb_pwd"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_middle"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:id="@+id/auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_middle" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_btn"
        android:textSize="@dimen/text_middle"
        android:layout_marginTop="20dp" />

</LinearLayout>