<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_location"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_middle" />
    <TextView
            android:id="@+id/display_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/search_keyword"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <EditText
            android:id="@+id/key_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_key_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/search_module"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <Spinner
            android:id="@+id/module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/search_distance"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <SeekBar
            android:id="@+id/distance"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_distance"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="km"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_go" />

</LinearLayout>