<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space"
                android:text="@string/item_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_middle" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space"
                android:text=""
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text="@string/rating"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:stepSize="0.25" />

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text="@string/item_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/notice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text="@string/item_notice"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_middle" />

        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space"
            android:text=""
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/fetch_route"
            android:text="@string/fetch_route" 
            android:layout_width="@dimen/one_line_width"
            android:layout_height="@dimen/one_line_height"
            android:layout_margin="@dimen/space"
            android:background="@color/darkgreen"
            android:textColor="@color/white"
            android:textSize="@dimen/text_middle"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/show_in_map"
            android:text="@string/show_in_map"
            android:layout_width="@dimen/one_line_width"
            android:layout_height="@dimen/one_line_height"
            android:layout_margin="@dimen/space"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:textSize="@dimen/text_middle"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/report"
            android:text="@string/report"
            android:layout_width="@dimen/one_line_width"
            android:layout_height="@dimen/one_line_height"
            android:layout_margin="@dimen/space"
            android:background="@color/darkblue"
            android:textColor="@color/white"
            android:textSize="@dimen/text_middle"
            android:layout_gravity="center" />
    </LinearLayout>

</ScrollView>